--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ minima:
   date_format: "%Y-%m-%d"
 title: Neos Modding Group
 header_pages:
-  - mod-list.md
+  - mods.md
   - submission-tutorial.md
   - about.md
 plugins:
