140 line commit just to make the mod list headings smaller

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,4 @@ header_pages:
   - submission-tutorial.md
 plugins:
   - jekyll-sitemap
+repository: neos-modding-group/neos-modding-group.github.io
