--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: jekyll/minima
 minima:
   skin: dark
   social_links:
-    github: neos-modding-group
+    - { platform: github, user_url: "https://github.com/neos-modding-group/" }
   # Minima date format. refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
   date_format: "%Y-%m-%d"
 title: Neos Modding Group
